--- a/templates/meetpage.html
+++ b/templates/meetpage.html
@@ -302,7 +302,7 @@
                <h1 class="meetTitle">{{meetInfo[0].meet_name}}</h1>
                </div>
                <a class="meetOption" href="/meetadmin">모임관리</a>
-               <a class="meetOption" href="/write">글쓰기</a>
+               <a class="meetOption" href="/write/{{meetInfo[0]._id}}">글쓰기</a>
            </div>
            <div class="meetContentsWrap">
                <div class="meetBoard">
@@ -353,9 +353,11 @@
                    <div class="notice">
                        <ul>
                            {% for i in data %}
+                           {% if i.meet_name == meetInfo[0].meet_name %}
                                 <li>
-                                    <a href="/notice/{{i._id}}">{{i.title}}</a>
+                                    <a href="/notice/{{meetInfo[0]._id}}/{{i._id}}">{{i.title}}</a>
                                 </li>
+                           {% endif %}
                            {% endfor %}
                    </ul>
                    </div>
