--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,42 +1,235 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <meta charset="UTF-8">
-    <title>게시글 작성</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
-    <style>
-        textarea {
-            height: 500px;
-            resize: none;
-        }
-    </style>
+    <title>공지글 쓰기</title>
 </head>
+
+<style>
+
+    html,body{
+        width:100%;
+        height:100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    .detailsBg {
+        width:100%;
+        height:100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    .detailsBg{
+        background: rgba(255, 255, 255, 0.5);
+        position: fixed;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top:0;
+        z-index: 100;
+    }
+
+    .detailsWrap{
+        max-width: 450px;
+        width:80%;
+        height:80%;
+        background-color: white;
+        border:1px solid lightgray;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        padding:2rem;
+        overflow:scroll;
+        -ms-overflow-style:none;
+        scrollbar-width:none;
+    }
+
+    .detailsWrap::-webkit-scrollbar{
+        display: none;
+    }
+
+    .detailTitle{
+        display: flex;
+        align-items: center;
+        margin-bottom: 1rem;
+        position: relative;
+    }
+    .detailTitle .meetPic{
+        width:50px;
+        height:50px;
+        background-color: gainsboro;
+        border-radius: 50%;
+    }
+
+    .detailTitle .formTitle{
+        margin: 0;
+        padding: 0;
+        margin-left: 10px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .detailTitle .formTitle > input:first-child{
+        width:400px;
+        font-size:2rem;
+        font-weight: bold;
+        border: 0;
+    }
+
+    .detailTitle .formTitle > input:nth-child(2){
+        width:250px;
+        font-size:1rem;
+        border: 0;
+    }
+
+    .detailTitle .formTitle > span{
+        position: absolute;
+        right:2rem;
+        bottom: 0;
+        color:gray;
+    }
+
+    .detailTitle .formTitle > span > input{
+        display: inline-block;
+    }
+
+    .detailTags h5{
+        margin:10px 0px;
+    }
+
+    .detailTags ul{
+        display: flex;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        align-items: center;
+    }
+
+    .detailTags #bigTag li, .detailTags #makeTag li:nth-child(1), .detailTags #makeTag li:nth-child(3) button{
+        border-radius: 50px;
+        padding:10px;
+        background-color: gainsboro;
+        margin-right: 5px;
+
+    }
+
+    .detailTags #bigTag li select, .detailTags #makeTag li:nth-child(1) select{
+        width:100px;
+        border: 0;
+        background-color: rgb(0,0,0,0);
+    }
+
+    .detailTags #makeTag li:nth-child(2){
+        flex:1;
+    }
+
+    .detailTags #makeTag li:nth-child(2) input{
+        border:1px solid lightgray;
+        width:95%;
+        height:30px;
+    }
+    .detailTags #makeTag li:nth-child(3) button{
+        padding:10px 20px;
+        margin-left: 5px;
+        border: 0;
+    }
+
+    .detailTags #smallTag li{
+        padding: 10px;
+        font-size: 0.1rem;
+    }
+
+    .detailTags #smallTag li::before{
+        content: "# ";
+        font-weight: bold;
+        font-size: 0.8rem;
+    }
+
+    .detailContents{
+        flex:1;
+        border: 1px solid lightgray;
+        overflow:hidden;
+    }
+
+    .detailContents textarea{
+        border: 0;
+        resize:none;
+        width:100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+    }
+
+    .detailContents textarea:focus{
+        outline:none;
+    }
+
+    .detailContents img{
+        max-width:100%;
+    }
+
+    .detailFooter{
+        text-align: right;
+        padding-top: 1rem;
+    }
+
+    .detailFooter input[type=submit]{
+        border: 0;
+        color:white;
+        background-color: gray;
+        font-weight: bold;
+        padding:10px 40px;
+        border-radius: 50px;
+
+    }
+
+    .detailTitle button{
+        position: absolute;
+        right:0;
+        top:0;
+        background: 0;
+        border: 0;
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+
+    form{
+        display: flex;
+        flex-direction: column;
+        flex:1;
+    }
+
+    </style>
+
 <body>
-    <div class="container">
-        <h3 class="my-3 border-bottom pb-2">게시글 작성하기</h3>
-        <form name="frm_pw" method="POST" action="/edit/{{ data._id }}">
-            <div class="mb-3">
-                <label for="notice">공지사항</label>
-                {% if data.notice == 'y' %}
-                <input type="radio" class="form-check-input" name="notice" id="notice" value="y" checked="checked"> 공지글
-                <input type="radio" class="form-check-input" name="notice" id="normal1" value="y"> 일반글
-                {% else %}
-                <input type="radio" class="form-check-input" name="notice" id="notice1" value="y"> 공지글
-                <input type="radio" class="form-check-input" name="notice" id="normal" value="n" checked="checked"> 일반글
-                {% endif %}
+
+    <div class="detailsBg">
+        <div class="detailsWrap">
+           <form method="POST" action="/edit/{{meetInfo[0]._id}}/{{data._id}}">
+            <div class="detailTitle">
+               <button>X</button>
+                <div class="formTitle">
+                    <input type="text" name="title" value="{{ data.title }}">
+                </div>
             </div>
-            <div class="mb-3">
-                <label for="title">제목</label>
-                <input type="text" name="title" id="title" class="form-control" value="{{ data.title }}">
+            <div class="detailContents">
+              <textarea name="contents" id="meetDetail">
+                  {{ data.contents }}
+              </textarea>
             </div>
-            <div class="mb-3">
-                <label for="contents">내용</label>
-                <textarea name="contents" id="contents" class="form-control">{{ data.contents }}</textarea>
+            <div class="detailFooter">
+                    <input type="submit" value="등록">
             </div>
-            <input type="submit" value="저장" class="btn btn-primary">
-            <a href="/meet" role="button" class="btn btn-secondary">취소</a>
-        </form>
+            </form>
+        </div>
     </div>
+    <script>
+        $(".detailTitle button").click(function(){
+            $(".detailsBg").hide();
+        })
+    </script>
 </body>
 </html>
