--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -1,420 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+{% extends "base.html" %}
+{% block title %} : mypage {% endblock %}
+{% block head %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="{{ url_for('static', filename='jquery.mousewheel.js') }}"></script>
-    <meta charset="UTF-8">
-    <title>모닥불</title>
-</head>
-<style>
-    html, body{
-        margin: 0;
-        border: 0;
-        width : 100%;
-        height: 100%;
-    }
-
-    h2, h3{
-        margin:0;
-    }
-
-    .main{
-        display:flex;
-        flex-direction: column;
-        margin: 0;
-        border: 0;
-        width : 100%;
-        height: 100%;
-    }
-
-    header{
-        top:0px;
-        padding: 1rem 2rem;
-        z-index:10;
-        display:flex;
-        position: relative;
-        justify-content: space-between;
-        align-items: center;
-        background-color: white;
-        border-bottom: 1px solid lightgray;
-    }
-    .navbar{
-        display: flex;
-        position: relative;
-    }
-    .search input{
-        height:30px;
-        margin-right:1rem;
-    }
-
-    .contents{
-        display: flex;
-        justify-content:center;
-        height: 100%;
-        flex-direction: column;
-        overflow: hidden;
-    }
-
-    .category {
-        flex:auto;
-        padding: 1rem;
-        padding-bottom: 0;
-        display:flex;
-        position: relative;
-        align-items: center;
-        background-color: lightblue;
-        z-index: 5;
-        justify-content: space-between;
-    }
-
-    .category ul {
-        list-style: none;
-        padding-left: 0;
-        display: flex;
-    }
-
-    .category form select{
-        height:30px;
-    }
-
-    .tags{
-        background-color: white;
-        padding:0.1rem;
-        font-size: 0.5rem;
-    }
-
-    .cardContainer{
-        position: relative;
-        display:flex;
-        align-items: center;
-        background-color: lightblue;
-        z-index: 5;
-        padding: 1rem;
-        padding-bottom:1.5rem;
-        height: 100%;
-    }
-    .cards{
-        flex:auto;
-        position: relative;
-        display:flex;
-        align-items: stretch;
-        flex-direction:row;
-        overflow: scroll;
-        white-space: nowrap;
-        ms-overflow-style: none; /* IE and Edge */
-        scrollbar-width: none; /* Firefox */
-        height:100%;
-    }
-
-    .cards::-webkit-scrollbar {
-        display: none; /* Chrome, Safari, Opera*/
-    }
-
-    .cards ul{
-        padding: 0;
-        margin: 0;
-    }
-
-    .card{
-        height: 99%;
-        padding:0;
-        margin-left:0;
-        margin-right:2px;
-        display: inline-block;
-        position: relative;
-        list-style: none;
-        width:200px;
-        border: 1px solid gray;
-        background-color:white;
-    }
-    .scrollBt-right{
-        position:absolute;
-        right:0;
-        z-index:4;
-    }
-
-    .scrollBt-left{
-        position:absolute;
-        left:0;
-        z-index:4;
-    }
-
-    .listTitle{
-        font-weight: bold;
-    }
-
-    .myPage{
-        flex:auto;
-        display: flex;
-        align-items: center;
-    }
-
-    .sidePage{
-        height:100%;
-       display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-    }
-
-    .sideTop{
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width:200px;
-        padding : 2rem;
-        text-align: center;
-    }
-
-    .profilepic{
-        width:150px;
-        height:150px;
-        background-color: lightgray;
-        border-radius: 50%;
-        display: inline-block;
-    }
-
-    .sidePage .listTitle{
-        padding-top: 1rem;
-    }
-
-    .makeMeet{
-        margin-top:1rem;
-        width: 100%;
-        height:30px;
-        border-radius: 30px;
-    }
-
-    .level{
-        font-size: 13px;
-        color:gray;
-    }
-
-    .sideOptions{
-        list-style: none;
-        padding-left: 0;
-        text-align: left;
-    }
-
-
-</style>
-<body>
-   <div class="main container">
-       <header class="container">
-           <a class="logo" href="/"> 모닥불 </a>
-           <nav class="navbar">
-           <div class="search"><form action="#" method="post">
-               <input type="text" name="keyword" placeholder="검색">
-               <input type="submit" value="src">
-           </form></div>
-           <button class="mypageBt"><a href="/mypage">mypage</a></button>
-           </nav>
-        </header>
+    <script src="{{ url_for('static', filename='jquery.mousewheel.js') }}"></script>
+    <link rel = "stylesheet" href="static/css/mypage.css">
+    {{ super() }}
+{% endblock %}
+{% block body %}
          <div class="myPage container">
-            <div class="sidePage">
-               <div class="sideTop">
-               <div class="profilepic">
-                   {% if session['profile'] %} <!-- 프로필이 있다면 -->
-                        <img src="{{session['profile']}}" width="150px"; height="150px;" style="border-radius: 50%;">
-                    {% endif %}
-               </div>
-                <h2 class="listTitle">{{session['username']}}</h2>
-                <div class="level">Lv. 00</div>
-                   <button class="makeMeet"><a href="/makepage">모임만들기</a></button>
-                <ul class="sideOptions">
-               <li><a href="/pfedit">프로필 수정</a></li>
-                    <li><a href="/mymeets">내 모임</a></li>
-                    <li><a href="/mymeets">참여중 모임</a></li>
-                    <li><a href="/mymeets">대기중 모임</a></li>
-                </ul>
-                </div>
-
-<a href="/logout" class="logout">로그아웃</a>
-                </div>
-           <div class="contents conatainer">
-                <div class="category">
-                  <h3 class="ListTitle">내 모임</h3>
-                  <form action="#" method="post">
-                   <!-- 디자인 하려면 button->li로 넣어야 할듯 -->
-                    <select name="openClosed" id="openClosed">
-                        <option value="모집중">모집 중</option>
-                        <option value="모집완료">모집 완료</option>
-                    </select>
-               </form>
-                </div>
-               <script>
-                   //마우스 가로 스크롤 이벤트
-                $(function() {
-
-                    $(".cards").mousewheel(function(event, delta) {
-
-                        this.scrollLeft -= (delta * 30);
-
-                        event.preventDefault();
-
-                    });
-
-                });
-               </script>
-               <div class="cardContainer">
-               <div class="cards makeSelf">
-                    <ul id="mycard">
-                        <!--내 모임 이 부분에 <li>로 모임 카드들 추가됨-->
-                        {% for i in  meetInfo %}
-                        {% if i[0].leader_id == session['userid'] %}
-                            <li class='card'>모임명: <a href="/meet/{{i[0]._id}}">{{i[0].meet_name}}</a> <br>
-                            인원 수 : {{i[0].currentcount}}명 <br>
-                            분류 : {{i[0].category}} <br>
-                            모임장 : {{i[0].leader_name}} <br>
-                            지역 : {{i[0].location}} <br>
-                            태그 : {% for j in i[0].tags %}
-                                         {% if j != ""%}
-                                           #{{j}}
-                                         {% endif %}
-                                      {% endfor %}
-                            </li>
-                        {% endif %}
-                        {% endfor %}
-                    </ul>
-               </div>
-                   <div class="scrollBt-left">왼쪽버튼</div>
-                   <div class="scrollBt-right">오른쪽버튼</div>
-            </div>
-            <div class="category">
-                  <h3 class="ListTitle">참여중 모임</h3>
-                  <form action="#" method="post">
-                   <!-- 디자인 하려면 button->li로 넣어야 할듯 -->
-                    <select name="openClosed" id="openClosed2">
-                        <option value="모집중">모집 중</option>
-                        <option value="모집완료">모집 완료</option>
-                    </select>
-               </form>
-                </div>
-            <div class="cardContainer">
-               <div class="cards participate">
-                  <ul id="joincard">
-                        <!--참여 중 모임 이 부분에 <li>로 모임 카드들 추가됨-->
-                      {% for i in  meetInfo %}
-                        {% if i[0].leader_id != session['userid'] %}
-                            <li class='card'>모임명: <a href="/meet/{{i[0]._id}}">{{i[0].meet_name}}</a> <br>
-                            인원 수 : {{i[0].currentcount}}명 <br>
-                            분류 : {{i[0].category}} <br>
-                            모임장 : {{i[0].leader_name}} <br>
-                            지역 : {{i[0].location}} <br>
-                            태그 : {% for j in i[0].tags %}
-                                  {% if j != ""%}
-                                    #{{j}}
-                                  {% endif %}
-                                  {% endfor %}
-                            </li>
-                        {% endif %}
-                        {% endfor %}
-                    </ul>
-               </div>
-                   <div class="scrollBt-left">왼쪽버튼</div>
-                   <div class="scrollBt-right">오른쪽버튼</div>
-            </div>
-                           <!--팝업 창-->
-            <div class="popup_layer" id="popup_layer" style="display: none;">
-                <div class="popup_box">
-                    <div style="height: 10px; width: 375px; float: top;">
-                        <a href="javascript:closePop();"><img src="/static/img/ic_close.svg"
-                                                              class="m_header-banner-close" width="30px" height="30px"></a>
-                    </div>
-                    <!--팝업 컨텐츠 영역-->
-                    <div class="popup_cont">
-                        <h2> 모임 만들기</h2>
-
-                        <h4> 내 id : <span id="user_id1">{{ session['userid'] }}</span></h4>
-
-                        <p>
-                            분류<br>
-                            주제 분류<select type="text" id="study_id1">
-                            <option>=== 선택 ===</option>
-                            <option value="study">스터디</option>
-                            <option value="sport">스포츠 모임</option>
-                            <option value="friends">친목 모임</option>
-                        </select><br>
-                            인원 수<select type="text" id="members_id1">
-                            <option>=== 선택 ===</option>
-                            <option value=3>3명</option>
-                            <option value=4>4명</option>
-                            <option value=5>5명</option>
-                        </select>
-                        </p>
-                        <p>
-                            태그
-                        </p>
-                        <textarea id="tag_id1" placeholder="태그 입력">
-
-                        </textarea>
-                        <input type="button" id="register" value="모임 등록">
-
-                    </div>
-                    <!--팝업 버튼 영역-->
-                    <div class="popup_btn" style="float: bottom; margin-top: 200px;">
-                        <a href="javascript:closePop();">닫기</a>
-                    </div>
-                </div>
-            </div>
-                <script>
-               //스크롤 버튼
-                    $(".scrollBt-right").click(function(){ $(this).siblings(".cards").animate({scrollLeft:"+=500"},800);
-                });
-                $(".scrollBt-left").click(function(){
-                    $(this).siblings(".cards").animate({scrollLeft:"-=500"},800);
-                });
-
-                //팝업 띄우기
-                function openPop() {
-                    document.getElementById("popup_layer").style.display = "block";
-
-                }
-
-                //팝업 닫기
-                function closePop() {
-                    document.getElementById("popup_layer").style.display = "none";
-                }
-
-
-
-
-                // 모임 등록 요청
-                $('#register').click(function () {
-                    let study_id = $("#study_id1").val();
-                    let members_id = $("#members_id1").val();
-                    let tag_id = $("#tag_id1").val();
-                    let user_id = $("#user_id1").html();
-                    let user_name = $("#user_name1").html();
-                    alert(user_name);
-                    let postdata = {
-                        "study_id": study_id,
-                        "members_id": members_id,
-                        "tag_id": tag_id,
-                        "leader_id": user_id,
-                        "leader_name": user_name
-                    }
-                    $.ajax({
-                        type: 'POST',
-                        url: '{{url_for("register")}}',
-                        data: JSON.stringify(postdata),
-                        dataType: 'JSON',
-                        contentType: "application/json",
-                        success: function (data) {
-                            alert('성공! 데이터 값:' + data.result2["study_id"] + " " + data.result2["members_id"]
-                                + " " + data.result2["tag_id"])
-                        },
-                        error: function (request, status, error) {
-                            alert('ajax 통신 실패')
-                            alert(error);
-                        }
-                    })
-                })
-
-               </script>
-            </div>
-            </div>
-            </div>
-</body>
-</html>
+            {%include 'mypage_sidebar.html' %}
+                {%if mypage == 0 %}
+                        {%include 'mypage_cards_cnt.html' %}
+                {%elif mypage == 1 %}
+                        {%include 'mypage_mymeet_cnt.html' %}
+                {%endif%}
+         </div>
+<!--        {%include 'profileedit.html' %}-->
+<!--        {%include 'makemeet.html' %}-->
+        <script type="text/javascript" src="{{url_for('static',filename='js/cardscroll.js')}}"></script>
+        {% endblock %}
+        {%block footer%}
+        <!--팀원이나 간단한 정보들적기, 높이 낮아지면 사라짐-->
+        {%endblock%}
