--- a/templates/makemeet.html
+++ b/templates/makemeet.html
@@ -230,7 +230,7 @@
         <div class="detailsWrap">
            <form method="post" action="/makepage" enctype = "multipart/form-data">
             <div class="detailTitle">
-               <button>X</button>
+               <button><a href="/mypage">X</a></button>
                 <div class="meetPic">
                     <label for="chooseProfile"><img src=""></label>
                     <input type="file" id="chooseProfile" name="meet_profile" accept="image/*" style="display:none;">
