--- a/templates/meetpage.html
+++ b/templates/meetpage.html
@@ -307,7 +307,7 @@
               <div class="meetPic"><img src="../static/meet_profile/{{meetInfo[0].meet_profile}}"></div>
                <h1 class="meetTitle">{{meetInfo[0].meet_name}}</h1>
                </div>
-               <a class="meetOption" href="/meetadmin">모임관리</a>
+               <a class="meetOption" href="/meetadmin/{{meetInfo[0]._id}}">모임관리</a>
                <a class="meetOption" href="/write/{{meetInfo[0]._id}}">글쓰기</a>
            </div>
            <div class="meetContentsWrap">
