--- a/templates/test3.html
+++ b/templates/test3.html
@@ -1,177 +1,117 @@
-{% extends "base.html" %}
-{% block title %} : main{% endblock %}
-{% block head %}
-    <style>
-        .wrap {position: absolute;left: 0;bottom: 40px;width: 288px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
-        .wrap * {padding: 0;margin: 0;}
-        .wrap .info {width: 286px;height: 120px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
-        .wrap .info:nth-child(1) {border: 0;box-shadow: 0px 1px 2px #888;}
-        .info .title {padding: 5px 0 0 10px;height: 30px;background: #eee;border-bottom: 1px solid #ddd;font-size: 18px;font-weight: bold;}
-        .info .close {position: absolute;top: 10px;right: 10px;color: #888;width: 17px;height: 17px;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/overlay_close.png');}
-        .info .close:hover {cursor: pointer;}
-        .info .body {position: relative;overflow: hidden;}
-        .info .desc {position: relative;margin: 5px 0 0 90px;height: 85px;}
-        .desc .ellipsis {overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
-        .desc .jibun {font-size: 11px;color: #888;margin-top: -2px;}
-        .info .img {position: absolute;top: 6px;left: 5px;width: 73px;height: 71px;border: 1px solid #ddd;color: #888;overflow: hidden;}
-        .info:after {content: '';position: absolute;margin-left: -12px;left: 50%;bottom: 0;width: 22px;height: 12px;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
-        .info .link {color: #5085BB; float:right; margin-right:25px;}
-    </style>
-    <script src="{{ url_for('static', filename='jquery.mousewheel.js') }}"></script>
-    <link rel = "stylesheet" href="static/css/main.css">
-    {{ super() }}
-{% endblock %}
-{% block body %}
-<p style="display: none" id="user_name1">{{ session['username'] }}</p>
-<p style="display: none" id="user_id1">{{ session['userid'] }}</p>
-<p style="display: none" id="meet_name"></p>
-           <div class="category"> <form action="#" method="post">
-               <!-- 디자인 하려면 button->li로 넣어야 할듯 -->
-                <select name="location" id="loc">
-                    <optgroup label="도시명"></optgroup>
-                    <option value="지역명">지역명</option>
-                </select>
-                <select name="category" id="category">
-                    <optgroup label="대분류"></optgroup>
-                    <option value="주제명">주제명</option>
-                </select>
-                <select name="headcount" id="head">
-                    <option value="">여기는 직접입력으로(생긴건 드롭다운처럼)</option>
-                </select>
-           </form>
-           <div class="tags"> <ul><li>태그 1</li><li>태그 2</li></ul> </div>
-             </div>
-           <div class="cardContainer">
-
-           <div class="cards">
-               <ul id="card_list">
-                      {% for i in  meetInfo %}
-                            <li class='card'>
-                                모임명: {{i.meet_name}} <br>
-                                인원 수 : {{i.currentcount}}명 <br>
-                                분류 : {{i.category}} <br>
-                                모임장 : {{i.leader_name}} <br>
-                                지역 : {{i.location}} <br>
-                                태그 : {% for j in i.tags %}
-                                      {% if j != ""%}
-                                        #{{j}}
-                                      {% endif %}
-                                      {% endfor %} <br>
-                                    <button value="{{i.meet_name}}"  class='card_button' onclick="mClick(this)">상세보기</button>
-                            </li>
-                        {% endfor %}
-                </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/meetadmin.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+</head>
+<body>
+    <!--서버에서 flash로 넘어온 메시지가 있다면 alert로 출력 -->
+    {%with messages = get_flashed_messages()%}
+      {%if messages %}
+            <script type="text/javascript">
+              alert("{{messages[-1]}}");
+            </script>
+        {%endif%}
+    {%endwith%}
+   <div class="main container">
+    <header class="container">
+           <a class="logo" href="/"> 모닥불 </a>
+           <nav class="navbar">
+               {% if not session['userid'] %}
+                    <button style=margin-right:20px;"><a href="/login">로그인</a></button>
+               {% else %}
+                    {% if session['profile'] %} <!-- 프로필이 있다면 -->
+                        <img id="profile" src="../{{session['profile']}}" width="30px"; height="30px"; style="margin-right:5px;border-radius: 50%;">
+                    {% endif %}
+                    {{session['username']}}님 반갑습니다.
+                    <button style="margin-left:20px;margin-right:20px;"><a href="/logout">로그아웃</a></button>
+               {% endif %}
+           <div class="search"><form action="#" method="post">
+               <input type="text" name="keyword" placeholder="검색">
+               <input type="submit" value="src">
+           </form></div>
+           <button class="mypage"><a href="/mypage">mypage</a></button>
+           </nav>
+        </header>
+       <div class="contents conatainer">
+           <div class="meetTitleNav">
+              <div class="meetwrap">
+              <div class="meetPic">
+                  <img src="../static/meet_profile/{{meetInfo[0].meet_profile}}">
+              </div>
+               <h1 class="meetTitle">{{meetInfo[0].meet_name}}</h1>
+               </div>
+               <a class="meetOption" href="/meet/{{meetInfo[0]._id}}">모임홈</a>
            </div>
-               <div class="scrollBt-left">왼쪽버튼</div>
-               <div class="scrollBt-right">오른쪽버튼</div>
-               <div class="hideToggle"><a> 숨기기 </a></div>
+           <div class="meetContentsWrap">
+               <div class="meetBoard">
+                  <div class="sub">
+                  <h2>참여 신청</h2>
+                   <div class="profileList">
+                        {% for i in waiting %}
+                       <div class="subProfile">
+                        <div class="profilePic">
+                            <img src="../static/profile/{{i.profile}}" alt="">
+                        </div>
+                        <div class="subName">{{i.username}}</div>
+                        <form method="post">
+                            <input type="hidden" name="userid" value="{{i.userid}}">
+                            <input type="hidden" name="meet_name" value="{{meetInfo[0].meet_name}}">
+                            <input type="submit" value="V" onclick="javascript: form.action='/accept';"/>
+                            <input type="submit" value="X" onclick="javascript: form.action='/reject';"/>
+                        </form>
+                   </div>
+                       {% endfor %}
+                   </div>
+                </div>
+                <div class="members">
+                  <h2>멤버 목록</h2>
+                   <div class="profileList">
+                      {% for i in members %}
+                       <div class="subProfile">
+                        <div class="profilePic">
+                            <img src="../static/profile/{{i.profile}}" alt="">
+                        </div>
+                        <div class="subName">{{i.username}}</div>
+                        <form method="post" action="/quit">
+                            <input type="hidden" name="userid" value="{{i.userid}}">
+                            <input type="hidden" name="meet_name" value="{{meetInfo[0].meet_name}}">
+                            <button type="submit">탈퇴</button>
+                        </form>
+                    </div>
+                    {% endfor %}
+                </div>
+               </div>
+               <div id="toggleBt">
+                       this is toggle
+                   </div>
+                   <script>
+                    $('.sub').hide();
+                    $('#toggleBt').click(function(){
+                        $('.sub').toggle();
+                        $('.members').toggle();
+                    });
+                   </script>
+               </div>
+               </div>
+           </div>
+       </div>
+       <div id="chatBt">chatBt</div>
+       <div id="chatBox">chatBox
+       <div id="chatCloseBt">X</div></div>
+       <script>
+        $('#chatBox').hide();
+        $('#chatBt').click(function(){
+            $('#chatBox').show();
+        });
+        $('#chatCloseBt').click(function(){
+            $('#chatBox').hide();
+        });
+       </script>
+       <div class="footer conatainer">
+           <!--팀원이나 간단한 정보들적기, 높이 낮아지면 사라짐-->
         </div>
-               <script>
-                    function mClick(meet) {
-                        meet = meet.value
-                        {% for i in meetInfo %}
-                            if(meet == "{{i.meet_name}}") {
-                                  $( '#card_title' ).text( "{{i.meet_name}}");
-                                  document.getElementById('meetPic').src =  "../static/meet_profile/{{i.meet_profile}}";
-                                  $( '#card_location' ).text( "{{i.location}}" );
-                                  $( '#card_category' ).text( "{{i.category}}" );
-                                  $( '#currentcount' ).text( "{{i.currentcount}}" );
-                                  $( '#headcount' ).text( "{{i.headcount}}" );
-                                  $( '#currentcount2' ).text( "{{i.currentcount}}" );
-                                  $( '#headcount2' ).text( "{{i.headcount}}" );
-                                  $( '.detailContents' ).text( "{{i.meetDetail}}" );
-                                  $(".detailsBg").show();
-                            }
-                        {% endfor %}
-                    }
-                </script>
-        <div id="map" style="width:100%;height:500px;margin-top:20px;"></div>
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d8a73cfa5a833cba814b8937d2b54a0e"></script>
-        <script>
-            var mapContainer = document.getElementById('map'),
-                mapOption = {
-                    center: new kakao.maps.LatLng(37.5826052,127.0101245), // 지도의 중심좌표
-                    level: 5 // 지도의 확대 레벨
-                };
-
-            var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
-            // 커스텀 오버레이에 표시할 내용입니다
-            // HTML 문자열 또는 Dom Element 입니다
-            var positions = []
-              {% for i in data %}
-                positions.push(
-                {
-                    title: '<div class="wrap">' +
-                    '    <div class="info">' +
-                    '        <div class="title">' +
-                    '            {{i.meet_title}}' +
-                    '        </div>' +
-                    '        <div class="body">' +
-                    '            <div class="img">' +
-                    '                <img src="../static/meet_profile/{{i.meet_profile}}" width="73" height="70">' +
-                    '           </div>' +
-                    '            <div class="desc">' +
-                    '                <div><a href="#" target="_blank" class="link">신청</a></div>' +
-                    '                <div class="ellipsis">{{i.category}}</div>' +
-                    '                <div class="jibun ellipsis">{{i.headcount}}명 모집합니다.</div>' +
-                    '                <div class="jibun ellipsis">{{i.meetDetail}}</div>' +
-                    '                <div class="jibun ellipsis">{{i.address}}</div>' +
-                    '                <div class="jibun ellipsis">                   ' +
-                    '                   {% for j in i.tags %}                       ' +
-                    '                       {% if j != ""%}                       ' +
-                    '                           #{{j}}                              ' +
-                    '                       {% endif %}                             ' +
-                    '                   {% endfor %} </div>                         ' +
-                    '            </div>' +
-                    '        </div>' +
-                    '    </div>' +
-                    '</div>',
-                    latlng: new kakao.maps.LatLng({{i.lat}}, {{i.lng}})
-                });
-              {% endfor %}
-
-            //displayMarker 함수를 호출해 positions 배열에 저장 된 마커들을 지도에 표시한다.
-            for(let i=0; i < positions.length; i++){
-                var data = positions[i];
-                displayMarker(data);
-            }
-
-            // 지도에 마커를 표시하는 함수입니다
-            function displayMarker(data) {
-                //마커 위치 설정
-                var marker = new kakao.maps.Marker({
-                    map: map,
-                    position: data.latlng
-                });
-                //오버레이 위치 설정
-                var overlay = new kakao.maps.CustomOverlay({
-                    yAnchor: 3,
-                    position: marker.getPosition()
-                });
-
-                //오버레이 내용 설정
-                var content = document.createElement('div');
-                content.innerHTML =  data.title;
-
-                overlay.setContent(content);
-
-                //마커를 클릭하면 오버레이가 나타나고 마커가 지도의 중심으로 이동한다.
-                kakao.maps.event.addListener(marker, 'click', function() {
-                    var latlng = marker.getPosition();
-                    map.setCenter(latlng);
-                    overlay.setMap(map);
-                });
-
-                //마커를 우클릭하면 오버레이가 사라진다.
-                kakao.maps.event.addListener(marker, 'rightclick', function() {
-                    overlay.setMap(null);
-                });
-            }
-        </script>
-           {%include 'moreinfo.html' %}
-           <script type="text/javascript" src="{{url_for('static',filename='js/main.js')}}"></script>
-           <script type="text/javascript" src="{{url_for('static',filename='js/cardscroll.js')}}"></script>
-           {% endblock %}
-           {%block footer%}
-            <!--팀원이나 간단한 정보들적기, 높이 낮아지면 사라짐-->
-           {%endblock%}
+   </div>
+</body>
+</html>
