--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
     {%endwith%}
        <div class="contents conatainer">
            <div class="loginBox">
-               <a class="logo" href="/kakao"> 모닥불 </a>
+                <a class="logo" href="/"><img src="{{ url_for('static', filename='logo_red.png') }}" alt=""></a>
                <div class="fromWrap">
                    <form action="#" method="post" data-parsley-validate>
                    <input type="text" name="id" placeholder="아이디" data-parsley-errors-container="div[id='idError']" data-parsley-error-message="아이디를 입력하세요!" required>
