--- a/templates/mypage_sidebar.html
+++ b/templates/mypage_sidebar.html
@@ -6,11 +6,10 @@
                     {% endif %}
                </div>
                 <h2 class="listTitle">{{session['username']}}</h2>
-                <div class="level">Lv. 00</div>
                 <button class="makeMeet"><a href="/makepage">모임만들기</a></button>
                 <ul class="sideOptions">
                     <li><a href="/pfedit">프로필 수정</a></li>
-                    <li><a href="/mymeets">대기중 모임</a></li>
+                    <li><a href="/waiting">대기중 모임</a></li>
                 </ul>
                 </div>
                 <a href="/logout" class="logout">로그아웃</a>
