--- a/templates/meetadmin.html
+++ b/templates/meetadmin.html
@@ -34,11 +34,11 @@
            <button class="mypage"><a href="/mypage">mypage</a></button>
            </nav>
         </header>
-       <div class="contents conatainer"> 
+       <div class="contents conatainer">
            <div class="meetTitleNav">
               <div class="meetwrap">
               <div class="meetPic">
-                  <img src="../static/meet_profile/{{meetInfo[0].meet_profile}}">
+                  <img src="../static/meet_profile/{{meetInfo[0].meet_profile}}" style="width:50px; height:50px;">
               </div>
                <h1 class="meetTitle">{{meetInfo[0].meet_name}}</h1>
                </div>
@@ -49,6 +49,7 @@
                   <div class="sub">
                   <h2>참여 신청</h2>
                    <div class="profileList">
+                      {% if meetInfo[0].leader_id == session['userid'] %}
                         {% for i in waiting %}
                        <div class="subProfile">
                         <div class="profilePic">
@@ -58,11 +59,16 @@
                         <form method="post">
                             <input type="hidden" name="userid" value="{{i.user_id}}">
                             <input type="hidden" name="meet_name" value="{{meetInfo[0].meet_name}}">
-                            <input type="submit" value="V" onclick="javascript: form.action='/accept';"/>
-                            <input type="submit" value="X" onclick="javascript: form.action='/reject';"/>
+                            <input type="submit" value="V" class="btn-accept" onclick="javascript: form.action='/accept';"/>
+                            <input type="submit" value="X" class="btn-reject" onclick="javascript: form.action='/reject';"/>
                         </form>
                    </div>
                        {% endfor %}
+                       {% else %}
+                        <div class="subProfile">
+                        </div>
+                       {% endif %}
+
                    </div>
                 </div>
                 <div class="members">
@@ -81,7 +87,7 @@
                         </form>
                     </div>
                     {% endfor %}
-                </div>   
+                </div>
                </div>
                <div id="toggleBt">
                        this is toggle
